# MicrovoltsEmulator

./: .gitignore  CMakeLists.txt  vcpkg.json
AuthServer/: CMakeLists.txt
AuthServer/src/: AuthServer.cpp
AuthServer/src/Database/: DbPlayerInfo.cpp
CastServer/: CMakeLists.txt
CastServer/src/: CastServerMain.cpp
Common/: CMakeLists.txt
Common/include/ConstantDatabase/: Cdb.h  CdbSingleton.h
MainServer/: CMakeLists.txt
MainServer/include/Classes/: Player.h
MainServer/include/Handlers/: LobbyClanListHandler.h  LobbyListHandler.h
MainServer/include/Persistence/: MainDatabaseManager.h
MainServer/include/Structures/Item/: MainEquippedItem.h  MainItem.h
MainServer/src/: MainServerMain.cpp
MainServer/src/ChatCommands/ComplexCommands/OneArgumentCommands/: SetNickname.cpp
MainServer/src/ChatCommands/DatabaseCommands/: AddPlayer.cpp
MainServer/src/Classes/: Player.cpp
MainServer/src/Structures/Item/: MainEquippedItem.cpp
